fix directory due to file being too big

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  display: flex;
 background-color: #F8F8F8;
 font-family: 'Cinzel', cursive;
 margin: 0;
@@ -12,6 +13,7 @@ background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
 margin-top: 20px;
+padding-bottom: 50px;
 }
 
 h1, h2, h3 {
@@ -19,6 +21,7 @@ h1, h2, h3 {
   color: white;
   font-weight bold;
   font-weight: 800;
+  padding: 5px 0;
 }
 
 #board {
@@ -72,7 +75,8 @@ h1, h2, h3 {
 }
 
 #sound {
-  background-color: #CFF2FF;
+  display:flex;
+  background-color: black;
   border-radius: 35%;
   padding: 8px;
   font-weight: bold;
@@ -86,7 +90,7 @@ h1, h2, h3 {
   border-radius: 35%;
   padding: 8px;
   font-weight: bold;
-  margin-left: 5px;
+  margin: 0 0 100px 5px;
 }
 
 .fire{
